<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_court"
          android:id="@+id/court_menu_item">
        <menu android:id="@+id/court_menu">

        </menu>
    </item>
    <group android:id="@+id/nav_matching">
        <item
            android:id="@+id/nav_online_matching"
            android:title="@string/menu_online_matching" />
    </group>

    <group android:id="@+id/nav_reservation">
        <item
            android:id="@+id/nav_court_reservation"
            android:title="@string/menu_court_reservation" />
    </group>

    <group android:id="@+id/nav_other">
        <item
            android:id="@+id/nav_setting"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/action_helps" />
    </group>
    <item
        android:id="@+id/nav_user_info"
        android:title="@string/menu_user_info" />
    <item
        android:id="@+id/nav_court_info"
        android:title="@string/menu_court_info" />
</menu>