<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center_horizontal"
        android:layout_marginTop="5dp"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_corner"
            android:backgroundTint="?attr/colorAccent"
            android:gravity="center"
            android:text="@string/menu_court_reservation"
            android:textColor="?android:textColorPrimary"
            android:textSize="40sp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="172.5dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:gravity="center"
                android:background="@drawable/round_corner"
                android:text="@string/menu_reservation_record"
                android:textColor="?android:textColorPrimary"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="172.5dp"
                android:layout_height="100dp"
                android:layout_margin="2.5dp"
                android:gravity="center"
                android:background="@drawable/round_corner"
                android:text="@string/menu_online_matching"
                android:textColor="?android:textColorPrimary"
                android:textSize="30sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>